--- a/.github/workflows/greet.yml
+++ b/.github/workflows/greet.yml
@@ -25,8 +25,8 @@ jobs:
       # a custom step that runs a couple shell commands
       - name: List
         run: |
-            echo "listing files in the bioinitio directory"
-            ls TCGA_Matchmaker_2
+            echo "listing files in the TCGA_code directory"
+            ls TCGA_code
       # a custom step that runs R code
       - name: Greet
         run: print("Hello, world!")
