--- a/.github/workflows/greet.yml
+++ b/.github/workflows/greet.yml
@@ -31,4 +31,4 @@ jobs:
       - name: Greet
         run: print("Hello, world!")
         # Replace `shell: Rscript {0}` with `shell: python {0}` to run Python code instead!
-        shell: Rscript {0}
+        shell: python {0}
