--- a/.github/workflows/unit_testing.yml
+++ b/.github/workflows/unit_testing.yml
@@ -15,7 +15,7 @@ jobs:
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v3
-    - run: mv /home/runner/work/TCGA_Matchmaker/TCGA_Matchmaker /home/runner/work/TCGA_Matchmaker/TCGA_code
+    #- run: mv /home/runner/work/TCGA_Matchmaker/TCGA_Matchmaker /home/runner/work/TCGA_Matchmaker/TCGA_code
     - name: Set up Python 3.11
       uses: actions/setup-python@v3
       with:
