--- a/.github/workflows/unit_testing.yml
+++ b/.github/workflows/unit_testing.yml
@@ -26,6 +26,10 @@ jobs:
         if [ -f requirements.txt ]; then
             pip install -r requirements.txt
         fi
+        pip install build
+        python -m build
+        pip install dist/TCGA_Matchmaker-0.1.0.tar.gz
     - name: Test with pytest
       run: |
         pytest .
+
