--- a/.github/workflows/unit_testing.yml
+++ b/.github/workflows/unit_testing.yml
@@ -22,6 +22,7 @@ jobs:
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
+        pip install pytest black flake8 # also install black & flake8
         pip install pytest
         if [ -f requirements.txt ]; then
             pip install -r requirements.txt
